Added support for hidden taming multiplier, set to 2 per official servers

--- a/taming.html
+++ b/taming.html
@@ -22,7 +22,7 @@
 		</tr>
 		<tr>
 			<td class="label">Taming Multiplier:</td>
-			<td><input ng-model="creature.tamingmultiplier" ng-change="settamingmethod()" type="number" step="any">
+			<td><input ng-model="creature.usertamingmultiplier" ng-change="settamingmethod()" type="number" step="any">
 		</tr>
 		<tr>
 			<td class="label">Food Rate Multiplier:</td>
